# slackbuilds

./: AGENTS.md  didier-manifest-details.txt  didier-manifest.txt  mtp.sh  notes.txt  slintify.sh
AppStream/: LOG
GraphicsMagick/: GraphicsMagick.SlackBuild
I38/: .xinitrc  SLKBUILD  gestting.command  i38.sh.diff  stormsscripturl
LucenePlusPlus/: LOG
MPlayer/: MPlayer.SlackBuild
Maintenance-of-the-repository/: CleanChangeLog.txt  build_matchbox.sh  meta_repo.sh  metagen.sh  re  repo_sync.sh  rss.sh  slint  slint2slacklog.py  update_repos.sh  write_rss_file.sh
Newaita/: Newaita-gitc2b596b-x86_64-1slint.md5
OpenAL/: OpenAL.SlackBuild
RHVoice/: RHVoice.conf  SLKBUILD  fr.RHVoice.conf  in_list_voices_separator_is_always_tab.diff
SDL3/: LOG  SDL3.SlackBuild
Tela-icon-theme/: Tela-icon-theme.SlackBuild
TiMidity++/: TiMidity++.SlackBuild
aaa_base/: LOG  slack-desc
aaxtomp3/: SLKBUILD
abcde/: abcde-2.11.0-x86_64-1slint.dep  abcde.SlackBuild  change_cddb_database_url.diff  slack-desc
absm/: SLKBUILD
aerc/: NEWURL  SLKBUILD  aerc.txt
alpine/: LOG  alpine.SlackBuild
alsa-utils/: deps  notetoself
alsa-utils.prev/: rc.alsa.slint  utils.sh
amd-microcode/: CONTENT  amd-microcode.SlackBuild  slack-desc
ansifilter/: SLKBUILD  makefile.diff
apulse/: SLKBUILD  fix_build_script
arabolical-font/: slack-desc
arch-install-scripts/: arch-install-scripts.SlackBuild
archivemail/: SLKBUILD
armcord/: armcord.SlackBuild
asunder/: SLKBUILD
at-spi2-atk/: at-spi2-atk.SlackBuild
at-spi2-core/: at-spi2-core-2.58.1.news  at-spi2-core.SlackBuild  doinst.sh
atk/: atk-2.38.0.sha256sum  atk.SlackBuild
atkmm23/: slack-desc
audacious/: LOG_4.5.1  audacious.SlackBuild
audacious-plugins/: LOG_4.5.1  LOG_4.5.1-2
autoconf/: autoconf.SlackBuild
autoconf-archive/: autoconf-archive.SlackBuild
b43-fwcutter/: b43-fwcutter.SlackBuild
bamf/: bamf.SlackBuild
barnard/: SLKBUILD
bashrun/: bashrun.SlackBuild
bdf2psf/: bdf2psf.SlackBuild
beep/: SLKBUILD
bicon/: bicon.SlackBuild
binutils/: slack-desc
bitlbee/: LOG  bitlbee.SlackBuild
blas/: blas.SlackBuild
breeze-icons/: breeze-icons.SlackBuild  breeze-icons.info  slack-desc
brltty/: LOG_d6d71a1  brltty-installer.SlackBuild  doinst-installer.sh  doinst.sh  make-source-git-tarball.sh  note-brltty-installer
brotli/: brotli.SlackBuild
btrfs-progs/: LOG_6.16.1  LOG_6.17.1  btrfs-progs.SlackBuild
btrfsmaintenance/: SLKBUILD
bubblewrap/: LOG
cage/: LOG  cage.url  kiosk  slack-desc  startkiosk
calibre/: calibre-6.14.1-x86_64-1slint.txt
capstone/: capstone.SlackBuild
catdoc/: catdoc.SlackBuild
ccsm/: SLKBUILD
cd-discid/: cd-discid.SlackBuild
cdcd/: SLKBUILD
cdrskin/: SLKBUILD
cerebro/: SLKBUILD  lOG
chawan/: chawan.SlackBuild  chawan_keybindings.txt
chromaprint/: chromaprint.SlackBuild
claws-mail/: LOG  SLKBUILD
cld2/: cld2.SlackBuild
cmake/: cmake.SlackBuild
cmake-extras/: SLKBUILD
cmake-nogui/: cmake.SlackBuild  slack-desc
codec2/: SLKBUILD
compiz/: Default.ini  LOG  Prefer_decorator_emerald.diff  SLKBUILD  Slint_keybindings_to_cycle_windows_and_panels.diff  compiz-0.8.18-x86_64-3slint.md5  ctrl_alt_t_open_mate_terminal.diff
compiz-manager/: SLKBUILD
compiz-plugins-extra/: Start_marco_if_compiz_crashes.diff
compiz-plugins-main/: Slint_default_settings.diff
compizconfig-python/: SLKBUILD
compsize/: compsize.SlackBuild
confuse/: confuse.SlackBuild
convtags/: SLKBUILD  make-git-tarball.sh
cpprestsdk/: cpprestsdk.SlackBuild
csound/: README.doc  SLKBUILD
cthulhu/: Cthulhu_and_Orca.md  note_to_self  toggle.screenreader.gschema.xml  toggle_screenreader.sh
dae/: README.Slint  SLKBUILD  dae_from_email  link
daisy-player/: NOTETOSELF  build_the_doc_with_man2html-1.6.diff  deps
dav1d/: dav1d.SlackBuild
dbus-python/: dbus-python.SlackBuild
dcron/: crond.default
depfinder/: SLKBUILD
dialog/: dialog.SlackBuild
dotnew/: NOTE  SLKBUILD
dotool/: PKGBUILD  SLKBUILD
dracut/: doinst.sh  dracut.SlackBuild  elogind.conf
dragonfm/: README  SLKBUILD
dummy/: SLKBUILD.lxqt  SLKBUILD.slint  build-dummy-packages.sh  convert-naming-table  generic
ebook-speaker/: README.testing  SLKBUILD  builddeps  robida_voyage_dumolet_BNR.txt
ecasound/: LOG  ecasound.SlackBuild
edbrowse/: SLKBUILD
edk2-ovmf/: edk2-ovmf.SlackBuild
efibootmgr/: efibootmgr.SlackBuild
elinks/: NEWLOG  elinks.SlackBuild.new  slack-desc
emacs/: LOG  emacs.SlackBuild.bof  emacspeak-60.0-x86_64-2slint.dep
emacspeak/: emacspeak_warnings.txt
emacspeak.prev/: emacspeak_warnings_slackware.txt
emerald/: emerald.SlackBuild
epsonscan2/: SLKBUILD_plugins
espeak-ng/: SLKBUILD.big  SLKBUILD.installer  all_mbrola_voices  base_mbrola_voices  build-espeak-ng.sh  list_of_mbrola_voices  make-git-tarball.sh
espeakup/: README.espeakup  espeakup-installer.SlackBuild  espeakup.SlackBuild  slack-desc  sysdesc.sh
eukleides/: SLKBUILD
exiftool/: exiftool.SlackBuild
extra-cmake-modules/: extra-cmake-modules.SlackBuild
faac/: faac.SlackBuild
fakeroot/: SLKBUILD
fim/: LOG
l/libmatchbox/libmatchbox-1.14/: AUTHORS  COPYING.HPND  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  libmb.pc.in  libtool
l/libmatchbox/libmatchbox-1.14/autom4te.cache/: output.1  output.2
l/libmatchbox/libmatchbox-1.14/doc/: Makefile  Makefile.in
l/libmatchbox/libmatchbox-1.14/libmb/: Makefile  Makefile.am  hash.c  hash.h  mb.h  mbdotdesktop.c  mbdotdesktop.h  mbexp.c  mbexp.h  mbpixbuf.c  mbpixbuf.h  mbtray.c  mbutil.h  xsettings-common.h
l/libmatchbox/libmatchbox-1.14/tests/: Makefile  Makefile.am  dump-image.c  pixbuf.c  unicode.c
l/libmatchbox/libmatchbox-1.14/tests/menu/: Makefile  Makefile.am  Makefile.in
xap/brisk-menu/brisk-menu-0.6.2/subprojects/translations/: README.md  ar.po  be.po  bg.po  bn.po  ca.po  cs.po  de.po  de_CH.po  es.po  es_AR.po  es_MX.po  eu.po  fi.po  fr_BE.po  ga.po  hu.po  id_ID.po  it.po  ja.po  ko.po  lt.po  meson.build  ne_NP.po  nn.po  pt_BR.po  ru.po  si.po  sk.po  sr_RS@latin.po  sv_SE.po  te.po  tr.po  zh_CN.po
(+3705 files in other folders)
