project(
    'brisk-menu',
    version: '0.6.2',
    license: 'GPL-2.0-only',
)

i18n = import('i18n')

# for i in *.po; do echo "    '$i'," | sed 's/\.po//'; done
langs = [
    'ar',
    'be_Latn',
    'be',
    'bg',
    'bn',
    'bs',
    'ca',
    'cs',
    'da_DK',
    'de_CH',
    'de',
    'el',
    'en_GB',
    'en_US',
    'eo',
    'es_AR',
    'es_MX',
    'es',
    'es_US',
    'eu',
    'fi',
    'fr_BE',
    'fr_FR',
    'ga',
    'gl_ES',
    'he',
    'hr_HR',
    'hu',
    'id_ID',
    'it',
    'ja',
    'kk',
    'ko',
    'lt',
    'ms',
    'nb_NO',
    'ne_NP',
    'nl_BE',
    'nl_NL',
    'nn',
    'pl',
    'pt_BR',
    'pt_PT',
    'ro_RO',
    'ru',
    'si',
    'sk',
    'sr_RS@latin',
    'sr_RS',
    'sv_SE',
    'te',
    'tr',
    'uk',
    'vi',
    'zh_CN',
    'zh_TW',
]

i18n.gettext(meson.project_name(), languages : langs, args : [
    '--from-code=UTF-8',
    '--add-comments',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dcgettext:2',
    '--keyword=g_dngettext:2,3',
    '--keyword=g_dpgettext2:2c,3',

    '--flag=N_:1:pass-c-format',
    '--flag=C_:2:pass-c-format',
    '--flag=NC_:2:pass-c-format',
    '--flag=g_dngettext:2:pass-c-format',
    '--flag=g_strdup_printf:1:c-format',
    '--flag=g_string_printf:2:c-format',
    '--flag=g_string_append_printf:2:c-format',
    '--flag=g_error_new:3:c-format',
    '--flag=g_set_error:4:c-format',
])
